traefik/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
spec: 
  entryPoints:
  - websecure
  routes:
  - match: Host(`traefik.altaif4.fr`)
    kind: Rule
    services:
    - name: traefik-dashboard
      port: 8080
  tls:
    certResolver: myresolver
